--- a/processor/.gitignore
+++ b/processor/.gitignore
@@ -1,4 +1,24 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-/target
+# JavaFX specific files
+*.class
+*.jar
+*.war
+*.ear
+*.jmod
+
+# JavaFX build directories
+/build/
+/out/
+/target/
+
+# JavaFX IDE specific files
+/.idea/
+/*.iml
+/.project
+/.classpath
+/.settings/
+.vscode/
+
+# Logs and temporary files
+*.log
+*.tmp
+*.swp
